--- a/analysis/analysis.qmd
+++ b/analysis/analysis.qmd
@@ -24,8 +24,21 @@ train_data$smoking <- factor(ifelse(train_data$smoking == 0, "non_Smoking", "Smo
 blueprint <- recipe(
   x = train_data,
   vars = colnames(train_data),
-  roles = c('ID', rep('predictor', 22), 'outcome'))
+  roles = c('ID', rep('predictor', 22), 'outcome')) %>%
+  step_zv(all_numeric()) %>%
+             step_nzv(all_numeric()) %>%
+             step_normalize(all_numeric_predictors())
 blueprint
+```
+
+```{r}
+loc      <- sample(1:nrow(train_data), round(nrow(train_data) * 0.9))
+train_data  <- train_data[loc, ]
+test_data  <- train_data[-loc, ]
+
+dim(train_data)
+
+dim(test_data)
 ```
 
 ```{r}
@@ -71,17 +84,11 @@ caret_mod
 ```
 
 ```{r}
-#read in test data
-
-test_data <- read.csv("~/EDLD Final/Smoker Status Using Bio-Signals/data/data_raw/test.csv")
 
 # performance evaluation
-predicted_test <- predict(caret_mod, test_data, type='response')
+predicted_test <- predict(caret_mod, test_data, type='prob')
 
-dim(predicted_test)
-```
-
-```{r}
+# View the updated test dataset
 head(predicted_test)
 ```
 
@@ -91,12 +98,17 @@ require(cutpointr)
 ```
 
 ```{r}
-# Compute the AUC/AROC/ROC
+# Compute the AUC
 
 cut.obj <- cutpointr(x     = predicted_test$Smoking,
                      class = test_data$smoking)
 
 auc(cut.obj)
+```
+
+```{r}
+
+
 ```
 
 ```{r}
@@ -121,7 +133,7 @@ Sys.time()
 ```
 
 ```{r}
-#| label: fig-logisticridge
+#| label: fig-logistic-ridge
 plot(caret_logistic_ridge)
 ```
 
@@ -132,9 +144,48 @@ caret_logistic_ridge$bestTune
 ```
 
 ```{r}
-predicted_te <- predict(caret_logistic_ridge, test_data, type='response')
+predicted_te <- predict(caret_logistic_ridge, test_data, type='prob')
 
 dim(predicted_te)
 
 head(predicted_te)
+```
+
+```{r}
+# Compute the AUC
+
+cut.obj <- cutpointr(x     = predicted_te$Smoking,
+                     class = test_data$smoking)
+
+auc(cut.obj)
+```
+
+```{r}
+
+```
+
+```{r}
+# Hyperparameter tuning grid for lasso penalty (lambda), alpha = 1
+
+grid <- data.frame(alpha = 1, lambda = seq(0,.001,.00001)) 
+grid
+```
+
+```{r}
+Sys.time()
+
+caret_logistic_lasso <- caret::train(blueprint, 
+                                     data      = train_data, 
+                                     method    = "glmnet",
+                                     family    = 'binomial',
+                                     metric    = 'logLoss',
+                                     trControl = cv,
+                                     tuneGrid  = grid)
+
+Sys.time()
+```
+
+```{r}
+#| label: fig-logistic-lasso
+plot(caret_logistic_lasso)
 ```
