Continued Data Analysis and writing

--- a/bibliography/project.bib
+++ b/bibliography/project.bib
@@ -1,9 +1,30 @@
 
+@misc{noauthor_health_2022,
+	title = {Health {Effects} of {Smoking} and {Tobacco} {Use}},
+	url = {https://www.cdc.gov/tobacco/basic_information/health_effects/index.htm},
+	abstract = {Information on the impact of diseases caused by tobacco use, such as cancer, heart disease, respiratory diseases, and learn about the impact of tobacco use on pregnant women.},
+	language = {en-us},
+	urldate = {2023-12-08},
+	journal = {Centers for Disease Control and Prevention},
+	month = mar,
+	year = {2022},
+	file = {Snapshot:/Users/mattguerra/Zotero/storage/45LYHVI8/index.html:text/html},
+}
 
-@book{alba1990,
-	title = {Ethnic Identity: The Transformation of White America},
-	author = {Alba, Richard D.},
-	year = {1990},
-	date = {1990},
-	publisher = {Yale University Press}
+@misc{noauthor_binary_nodate,
+	title = {Binary {Prediction} of {Smoker} {Status} using {Bio}-{Signals}},
+	url = {https://kaggle.com/competitions/playground-series-s3e24},
+	abstract = {Playground Series - Season 3, Episode 24},
+	language = {en},
+	urldate = {2023-12-08},
+	file = {Snapshot:/Users/mattguerra/Zotero/storage/G5WIKNKB/overview.html:text/html},
+}
+
+@misc{noauthor_smoker_nodate,
+	title = {Smoker {Status} {Prediction} using {Bio}-{Signals}},
+	url = {https://www.kaggle.com/datasets/gauravduttakiit/smoker-status-prediction-using-biosignals},
+	abstract = {Smoker Status Prediction using Bio-Signals},
+	language = {en},
+	urldate = {2023-12-08},
+	file = {Snapshot:/Users/mattguerra/Zotero/storage/BWST4XEU/smoker-status-prediction-using-biosignals.html:text/html},
 }
