--- a/bibliography/project.bib
+++ b/bibliography/project.bib
@@ -28,3 +28,10 @@
 	urldate = {2023-12-08},
 	file = {Snapshot:/Users/mattguerra/Zotero/storage/BWST4XEU/smoker-status-prediction-using-biosignals.html:text/html},
 }
+
+@misc{noauthor_triglycerides_nodate,
+	title = {Triglycerides: {Why} do they matter? - {Mayo} {Clinic}},
+	url = {https://www.mayoclinic.org/diseases-conditions/high-blood-cholesterol/in-depth/triglycerides/art-20048186},
+	urldate = {2023-12-08},
+	file = {Triglycerides\: Why do they matter? - Mayo Clinic:/Users/mattguerra/Zotero/storage/QL3HH7UZ/art-20048186.html:text/html},
+}
